# collaborative-hill-lab

./: .gitignore  AGENTS.md  BUILD_LOG.md  CITATION.cff  CLAUDE.md  HANDOFF.md  Makefile  NEXT.md  PLAN.md  README.md  pyproject.toml  requirements-lock.txt
.claude/: settings.json  tier.json
.codex/: config.toml  hooks.json
docs/: FOUNDATION_REVIEW.md
docs/adr/: 0001-simulation-kernel-and-concordia.md  0002-event-ledger-and-storage.md  0003-five-plane-scenario-model.md  0004-mechanism-vs-narrative-skin.md  0005-randomness-and-paired-runs.md  0006-study-freezing-and-manifests.md  0007-llm-adapter-and-observable-rationale.md
docs/research/: CLAIMS_AND_LIMITATIONS.md  LEGACY_AUDIT.md  METHODOLOGY.md  NOVELTY_MATRIX.md  PREREGISTRATION_TEMPLATE.md  RELATED_WORK.md  REPLICATION_REPORT.md  RESEARCH_CHARTER.md  STATISTICAL_ANALYSIS_PLAN.md  THREAT_MODEL.md
docs/research/_discovery/: architecture-stress.md  legacy-code-audit.md  mechanism-math-review.md  methodology-stats.md  related-work.md  security-adversarial.md
scripts/: acceptance.py  clean_generated.py  replay_smoke.py  report_all.py
src/collaborative_hill/: __init__.py  cli.py
src/collaborative_hill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/collaborative_hill/agents/: __init__.py  replay.py
src/collaborative_hill/domain/: __init__.py  actions.py  claims.py  evidence.py  (+1 more)
studies/000-legacy-reproduction/: README.md  add_allc_conditions.py  generate_report.py  study.json
studies/001-evidence-commons/: COST_WORKSHEET.md  MECHANISM_CERTIFICATE.md  PREREGISTRATION.md  README.md  certificate.py  generate_study.py  study.json
tests/integration/: _helpers.py  test_clean_state_manifest.py  test_cli_end_to_end.py  test_provenance_inspection.py  test_study_000_pipeline.py  test_study_001_pipeline.py
tests/metamorphic/: _helpers.py  test_agent_permutation.py  test_branch_prefix.py  test_irrelevant_evidence.py  test_replay_determinism.py  test_skin_isolation.py  test_source_ordering.py
tests/property/: test_canonical_json.py  test_seed_properties.py
tests/unit/: _fixtures.py  test_capability_enforcement.py  test_cost_honesty.py  test_ec_transitions.py  test_event_chain.py  test_hidden_truth_leak.py  test_institution_rules.py  test_invalid_llm_output.py  test_legacy_defect_regression.py  test_manifest.py  test_nipd_transitions.py  test_observation_visibility.py  test_payoff_oracle.py  test_provenance_graph.py  test_provider_failure.py
(+49 files in other folders)
